# django-template

./: README.md  pyproject.toml
config/: api.py  settings.py  urls.py
sample/: api.py  tests.py
